--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,3 +1,4 @@
+   
 <!DOCTYPE HTML>
 <html lang="kr">
   <head>
@@ -16,43 +17,28 @@
  
   <body>
 
-    <!--Main Navigation-->
-    <!--
-    <header>
-      <nav>
-        <a href="/">홈</a>
-        <a href="/">Home</a>
-        <a href="/Server_Client">Server-Client지정</a>
-        <a href="/Manual">수동작업</a>
-        <a href="/Playlist">플레이리스트</a>
-        <a href="/Macro">매크로(기억)</a>
-        <a href="/about">About</a>
-      </nav>
-      <hr>
-    </header>-->
-
     <header>
         <!-- Intro settings -->
         <style>
-          #intro {
-            /* Margin to fix overlapping fixed navbar */
-            margin-top: 58px;
-          }
-    
-          @media (max-width: 991px) {
             #intro {
-              /* Margin to fix overlapping fixed navbar */
-              margin-top: 45px;
+                /* Margin to fix overlapping fixed navbar */
+                margin-top: 58px;
             }
-          }
+        
+            @media (max-width: 991px) {
+                #intro {
+                /* Margin to fix overlapping fixed navbar */
+                margin-top: 45px;
+                }
+            }
         </style>
-    
+
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
             <div class="container-fluid">
                 <!-- Navbar brand -->
                 <a class="navbar-brand" target="_blank" href="http://www.silti.co.kr">
-                <img src="static/img/silti_logo.png" height="16" alt="" loading="lazy"
+                <img src="static/img/silti_logo.ico" height="16" alt="" loading="lazy"
                     style="margin-top: 0px;" />
                 </a>
                 <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
@@ -60,45 +46,57 @@
                 <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarExample01">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item active">
-                    <a class="nav-link" aria-current="page" href="/home">Home</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="/Server_Client" rel="nofollow"
-                        target="_blank">ServerClient지정</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="/Manual">Manual</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/Playlist">Playlist</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/Macro">매크로</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/About">사용법</a>
-                    </li>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item active">
+                            <a class="nav-link" aria-current="page" href="/home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/ServerClient">ServerClient지정</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Manual">수동사용</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Playlist">Playlist</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Macro">매크로</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/About">사용법</a>
+                        </li>
+                        <li class="nav-item me-3 me-lg-0">
+                            <a class="nav-link" href="https://github.com/Anchulshin/SILTI-Mobile-Column-Lift/" rel="nofollow" target="_blank">
+                              <i class="fab fa-github"></i>
+                            </a>
+                          </li>
+                    </ul>
 
-                </ul>
-        
+                    
+
+
+
                 </div>
             </div>
         </nav>
         <!-- Navbar -->
-
+        <!-- Jumbotron -->
+        <div id="intro" class="p-5 text-center bg-light">
+            <h1 class="mb-3 h2">실티 모바일 컬럼 리프트</h1>
+            <p class="mb-3">정확하게 들고, 정확하게 회전하기</p>
+            <a class="btn btn-primary m-2" href="https://www.youtube.com/" role="button" rel="nofollow"
+                target="_blank">유튜브 사용법</a>
+            <a class="btn btn-primary m-2" href="https://github.com/Anchulshin/SILTI-Mobile-Column-Lift/" target="_blank"
+                role="button">Download SILTI MCL</a>
+        </div>
+          <!-- Jumbotron -->
 
     </header>
     <!--Main Navigation-->
+    <hr>
 
 
 
-
-
-
-
- 
     <main role="main">
     <!-- Main content block -->
     {% block content %}{% endblock %}
