--- a/templates/layout2.html
+++ b/templates/layout2.html
@@ -1,6 +1,6 @@
    
 <!DOCTYPE HTML>
-<html lang="en">
+<html lang="kr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -14,74 +14,42 @@
     <link rel="stylesheet" href="static/css/mdb.min.css" />
     <!-- Custom styles -->
     <link rel="stylesheet" href="static/css/style.css" />
-    <style>INPUT:-webkit-autofill,SELECT:-webkit-autofill,TEXTAREA:-webkit-autofill{animation-name:onautofillstart}INPUT:not(:-webkit-autofill),SELECT:not(:-webkit-autofill),TEXTAREA:not(:-webkit-autofill){animation-name:onautofillcancel}@keyframes onautofillstart{from{}}@keyframes onautofillcancel{from{}}
-    </style>
   </head>
  
   <body>
-    <!--Main Navigation-->
+
     <header>
         <!-- Intro settings -->
         <style>
             #intro {
                 /* Margin to fix overlapping fixed navbar */
-                margin-top: 58px;
+                margin-top: 40px;
             }
         
             @media (max-width: 991px) {
                 #intro {
                 /* Margin to fix overlapping fixed navbar */
-                margin-top: 45px;
+                margin-top: 20px;
                 }
             }
-            /* Color of the links BEFORE scroll */
-            .navbar-scroll .nav-link,
-            .navbar-scroll .navbar-toggler-icon {
-            color: #fff;
-            }
-
-            /* Color of the links AFTER scroll */
-            .navbar-scrolled .nav-link,
-            .navbar-scrolled .navbar-toggler-icon {
-            color: #4f4f4f;
-            }
-
-            /* Color of the navbar AFTER scroll */
-            .navbar-scrolled {
-            background-color: #fff;
-            }
-
-            /* An optional height of the navbar AFTER scroll */
-            .navbar.navbar-scroll.navbar-scrolled {
-            padding-top: 5px;
-            padding-bottom: 5px;
-            }   
         </style>
 
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-scroll navbar-light bg-white fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
             <div class="container-fluid">
                 <!-- Navbar brand -->
                 <a class="navbar-brand" target="_blank" href="http://www.silti.co.kr">
                     <img src="static/img/silti_logo.ico" height="16" alt="" loading="lazy"
                         style="margin-top: 0px;" />
                 </a>
-                <button 
-                    class="navbar-toggler ps-0" 
-                    type="button" 
-                    data-mdb-toggle="collapse" 
-                    data-mdb-target="#navbarExample01"
-                    aria-controls="navbarExample01" 
-                    aria-expanded="false" 
-                    aria-label="Toggle navigation"
-                    >
-
-                    <i class="fas fa-bars"></i>
+                <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
+                aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-bars"></i>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarExample01">
+                <div class="navbar-collapse collapse show" id="navbarExample01" style="">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item active">
-                            <a class="nav-link" href="/">Home</a>
+                            <a class="nav-link" aria-current="page" href="#intro">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/ServerClient">ServerClient지정</a>
@@ -103,31 +71,25 @@
                         </li>
                         <li class="nav-item me-3 me-lg-0">
                             <a class="nav-link" href="https://github.com/Anchulshin/SILTI-Mobile-Column-Lift/" rel="nofollow" target="_blank">
-                                <i class="fab fa-github"></i>
+                              <i class="fab fa-github"></i>
                             </a>
-                        </li>
+                          </li>
                     </ul>
+                    
+
+
                 </div>
             </div>
         </nav>
         <!-- Navbar -->
         <!-- Jumbotron -->
         <div id="intro" class="p-5 text-center bg-light">
-            <h1 class="mb-3 h2">실티 모바일 컬럼 리프트</h1>
-            <p class="mb-3">정확하게 들고, 정확하게 회전하기</p>
-            <a class="btn btn-primary m-2" href="https://www.youtube.com/" role="button" rel="nofollow"
-                target="_blank">유튜브 사용법</a>
-            <a class="btn btn-primary m-2" href="https://github.com/Anchulshin/SILTI-Mobile-Column-Lift/" target="_blank"
-                role="button">Download SILTI MCL</a>
+            <h1 class="mb-3 h2">실티 모바일 컬럼 리프트 {% block methods %}{% endblock %}</h1>
+            <p class="mb-3">{% block submethods %}{% endblock %}</p>
         </div>
         <!-- Jumbotron -->
-
     </header>
     <!--Main Navigation-->
-
-
-
-    <hr>
 
 
 
